--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
+<div class= "center jumbotron">
+  <h1>Welcome to Blather</h1>
+  <h2>
+    This is the home page for the
+    Blather twitter clone.
+  </h2>
+  
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  
+</div>
 
-<h1>Blather</h1>
-<p>
-  This is the home page for the
-  Blather twitter clone.
-</p>
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
